--- a/src/card.module.css
+++ b/src/card.module.css
@@ -7,7 +7,7 @@
 }
 
 .modal-content {
-  width: 860px;         /* ⬅ AUMENTÉ EL TAMAÑO DEL MODAL */
+  width: 860px;
   max-width: 95%;
   background: white;
   padding: 25px;
